@@ -210,11 +210,11 @@ struct Spawn_Struct {
 /*0140*/ uint8 unknown0140[4];
 /*0144*/ uint8  is_npc;         // 0=no, 1=yes
 /*0145*/ uint8  hairstyle;      // Hair style
-/*0146*/ uint8  beard;          // Beard style (not totally, sure but maybe!)
+/*0146*/ uint8  beardcolor;     // Beard color
 /*0147*/ uint8 unknown0147[4];
 /*0151*/ uint8  level;          // Spawn Level
 /*0152*/ uint8  unknown0259[4]; // ***Placeholder
-/*0156*/ uint8  beardcolor;     // Beard color
+/*0156*/ uint8  beard;          // Beard style 
 /*0157*/ char     suffix[32];     // Player's suffix (of Veeshan, etc.)
 /*0189*/ uint32 petOwnerId;     // If this is a pet, the spawn id of owner
 /*0193*/ int8   guildrank;      // 0=normal, 1=officer, 2=leader
