@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==05/15/2009==
+Trevius: (Trevius/Shendare) Swapped Beardcolor and Beard in the spawn struct for Titanium and Titanium Facial Features should be finalized now.
+
 ==05/14/2009==
 Trevius: More work on Facial Features for Characters. Trying to get them functioning properly without hacks before adding SoF Features.
 Trevius: SoF - Character Facial Features other than Drakkin specific ones all now work 100% in Character Select and in game.
